Fix footer spacing

--- a/less/style.less
+++ b/less/style.less
@@ -192,7 +192,9 @@
 /*** FOOTER ***/
 .footer {
   margin-top: 0;
-  padding-top: 2 * @padding-large-vertical;
+  padding-top: 23px;
+  padding-bottom: @grid-gutter-width / 2;
+  line-height: 1.6em;
   font-size: @font-size-small;
   color: #888888;
 }
